Exclude mockup classes from the test coverage analysis
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpclient/trunk/http-common@159617 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -189,6 +189,7 @@
     <clover-setup initString="${build.home}/clover/database/coverage.db" >
       <files>
         <exclude name="**/Test*.java"/>
+        <exclude name="**/mockup/*.java"/>
       </files>
     </clover-setup>
   </target>
