Task 'test' no longer fails if clover.jar is not present in the ant lib directory
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core@349517 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
     <do-compile/>
   </target>
 
-  <target name="test" depends="clover-db, compile">
+  <target name="test" depends="compile">
     <do-test testentry="org.apache.http.TestAll"/>
   </target>
 
@@ -35,7 +35,7 @@
     <do-javadoc packagenames ="org.apache.http.*"/>
   </target>
 
-  <target name="clover" depends="test">
+  <target name="clover" depends="clover-db, test">
     <do-clover/>
   </target>
 
