--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.apache.jakarta.httpcomponents</groupId>
+    <artifactId>httpcomponents</artifactId>
+    <version>4.0-SNAPSHOT</version>
+  </parent>
   <groupId>org.apache.jakarta.httpcomponents</groupId>
   <artifactId>http-core</artifactId>
   <packaging>jar</packaging>
   <version>4.0-SNAPSHOT</version>
   <name>HttpCore</name>
   <url>http://jakarta.apache.org/httpcomponents/httpcore/</url>
-  <description>Core components to build HTTP enabled applications.</description>
+  <description>Core components to build HTTP enabled services</description>
   <inceptionYear>2005</inceptionYear>
 
   <organization>
