--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
   <licenses>
     <license>
       <name>Apache License</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>LICENSE.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -97,6 +97,26 @@
       </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <plugins>
+        <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-project-info-reports-plugin</artifactId>
+           <reportSets>
+             <reportSet>
+               <reports>
+                 <report>dependencies</report>
+                 <report>mailing-list</report>
+                 <report>issue-tracking</report>
+                 <report>license</report>
+                 <report>scm</report>
+               </reports>
+             </reportSet>
+           </reportSets>
+        </plugin>
+    </plugins>
+  </reporting>
 
   <properties>
     <maven.compile.source>1.3</maven.compile.source>
