--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 
   <distributionManagement>
     <site>
-      <id>http-core-site</id>
+      <id>apache.website</id>
       <url>scp://people.apache.org/www/jakarta.apache.org/httpcomponents/http-core/</url>
     </site>
   </distributionManagement>
