Added project reports: javadoc, source cross reference, surefire
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core@384179 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
       <includes>**/TestAll.java</includes>
     </testResources>
     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
@@ -114,6 +118,18 @@
                </reports>
              </reportSet>
            </reportSets>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jxr-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>surefire-report-maven-plugin</artifactId>
         </plugin>
     </plugins>
   </reporting>
