Added clover report
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core@384240 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>surefire-report-maven-plugin</artifactId>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clover-plugin</artifactId>
+            <configuration>
+                <licenseFile>${clover.license}</licenseFile>
+            </configuration>
+        </plugin>
     </plugins>
   </reporting>
 
