--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
     <sourceDirectory>src/java</sourceDirectory>
     <testSourceDirectory>src/test</testSourceDirectory>
     <testResources>
-      <includes>**/TestAll.java</includes>
+        <testResource>
+            <directory>src/test</directory>
+            <includes>
+                <include>**/TestAll.java</include>
+            </includes>
+        </testResource>
     </testResources>
     <plugins>
         <plugin>
