Added support for Findbugs code analysis
Contributed by Sebastian Bazley <sebb at apache.org> 


git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core@390653 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -43,4 +43,8 @@
     <do-package/>
   </target>
 
+  <target name="findbugs" depends="compile, findbugs-init">
+    <do-findbugs/>
+  </target>
+
 </project>
