--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>4.0-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.jakarta.httpcomponents</groupId>
-  <artifactId>http-core</artifactId>
+  <artifactId>jakarta-hc-httpcore</artifactId>
   <packaging>jar</packaging>
   <version>4.0-SNAPSHOT</version>
   <name>HttpCore</name>
@@ -93,6 +93,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagBase>https://svn.apache.org/repos/asf/jakarta/httpcomponents/tags/</tagBase>
+        </configuration>
+     </plugin>
     </plugins>
   </build>
 
