Trying to work around Maven2 weirdness. Changed HttpComponents project POM version to 'project'
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core@392505 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.jakarta.httpcomponents</groupId>
     <artifactId>httpcomponents</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>project</version>
   </parent>
   <groupId>org.apache.jakarta.httpcomponents</groupId>
   <artifactId>jakarta-hc-httpcore</artifactId>
