--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.apache.jakarta.httpcomponents</groupId>
   <artifactId>jakarta-hc-httpcore</artifactId>
   <name>HttpCore</name>
-  <version>4.0-alpha1</version>
+  <version>4.0-alpha2-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
   <url>http://jakarta.apache.org/httpcomponents/http-core/</url>
   <issueManagement>
@@ -24,9 +24,9 @@
     </license>
   </licenses>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/tags/http-core-4.0-alpha1/http-core</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/tags/http-core-4.0-alpha1/http-core</developerConnection>
-    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/tags/http-core-4.0-alpha1/http-core</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core</connection>
+    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core</developerConnection>
+    <url>http://svn.apache.org/repos/asf/jakarta/httpcomponents/trunk/http-core</url>
   </scm>
   <organization>
     <name>Apache Software Foundation</name>
