Updated POM and build files to reflect changes in SVN layout
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@392842 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="Jakarta HttpCompomponents Core" default="compile" basedir=".">
 
   <property file="${basedir}/build.properties"/>
-  <property file="${basedir}/../build.properties"/>
+  <property file="${basedir}/../project/build.properties"/>
   <property file="${user.home}/build.properties"/>
 
 <!-- ========== Required component properties ============================= -->
@@ -19,7 +19,7 @@
 
 <!-- ========== Import common targets and macrdefs ======================== -->
 
-  <import file="../build-common.xml"/>
+  <import file="../project/build-common.xml"/>
 
 <!-- ========== Targets: "External" Targets: Compilation ================== -->
 
