Changed HttpCore artifact id to jakarta-httpcore
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@393062 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.jakarta.httpcomponents</groupId>
-  <artifactId>httpcore</artifactId>
+  <artifactId>jakarta-httpcore</artifactId>
   <name>HttpCore</name>
   <version>4.0-alpha1-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
