Changed current version of HttpCore to 4.0-alpha2-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/jakarta/httpcomponents/httpcore/trunk@394344 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.apache.jakarta.httpcomponents</groupId>
   <artifactId>jakarta-httpcore</artifactId>
   <name>HttpCore</name>
-  <version>4.0-alpha2</version>
+  <version>4.0-alpha2-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
   <url>http://jakarta.apache.org/httpcomponents/httpcore/</url>
   <issueManagement>
